--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 
     <h1 class="status">Loading...</h1>
-    <p>Saving files in </p>
+    <p class="saveLocation"></p>
 
     <ul class="log"></ul>
 
